manifests/artemis-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: artemis
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
