manifests/02-echotest-p1.yml
---
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  namespace: echotest
  labels:
    app.kubernetes.io/name: echotest
    app.kubernetes.io/part-of: echotest
    app: foo
spec:
  containers:
  - name: foo-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=foo"
