manifests/03-echotest-p2.yml
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  namespace: echotest
  labels:
    app.kubernetes.io/name: echotest
    app.kubernetes.io/part-of: echotest
    app: bar
spec:
  containers:
  - name: bar-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=bar"
