manifests/04-echotest-svc1.yml
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
  namespace: echotest
  labels:
    app.kubernetes.io/name: echotest
    app.kubernetes.io/part-of: echotest
spec:
  selector:
    app: foo
  ports:
  # Default port used by the image
  - port: 5678
