manifests/06-echotest-in.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echotest-ingress
  namespace: echotest
  labels:
    app.kubernetes.io/name: echotest
    app.kubernetes.io/part-of: echotest
spec:
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: foo-service
            port:
              number: 5678
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: bar-service
            port:
              number: 5678
